added user item list
