# tmp/swagger.yaml
@@ -221,6 +221,32 @@
           }
         }
       }
+    },
+    "/user/sales": {
+      "get": {
+        "description": "Список лотов пользователя",
+        "tags": [
+          "user"
+        ],
+        "operationId": "user_sales_list",
+        "responses": {
+          "200": {
+            "description": "Список лотов пользователя",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/sale"
+              }
+            }
+          },
+          "401": {
+            "description": "Пользователь не аутентифицирован в системе",
+            "schema": {
+              "$ref": "#/definitions/errorResult"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
